# bookshelf-rcmip-emissions

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: bump.yaml  ci.yaml  release.yaml
changelog/: 1.improvement.md  2.improvement.md  3.improvement.md  4.fix.md
scripts/: changelog-to-release-template.py
src/: rcmip-emissions.py
