[project]
name = "bookshelf-rcmip-emissions"
version = "0.1.1"
description = "Emissions dataset from RCMIP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bookshelf-producer>=0.3.1b3",
    "scmdata>=0.16.1",
]

[tool.ruff]
src = [
    "src",
]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [
    "PD002",
]
ignore = [
    "D100",
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",
    "S101",
    "PLR2004",
]

[tool.ruff.lint.isort]
known-first-party = [
    "src",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.towncrier]
# This runs towncrier in non-python mode, so we need to specify the project name and version at run-time
name = "bookshelf-rcmip-emissions"
filename = "CHANGELOG.md"
directory = "changelog/"
title_format = "## RCMIP Emissions {version} ({project_date})"
underlines = [
    "",
    "",
    "",
]
issue_format = "[#{issue}](https://github.com/climate-resource/bookshelf-rcmip-emissions/pull/{issue})"
type = [
    { directory = "breaking", name = "Breaking Changes", showcontent = true },
    { directory = "deprecation", name = "Deprecations", showcontent = true },
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "improvement", name = "Improvements", showcontent = true },
    { directory = "fix", name = "Bug Fixes", showcontent = true },
    { directory = "docs", name = "Improved Documentation", showcontent = true },
    { directory = "trivial", name = "Trivial/Internal Changes", showcontent = false },
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "toml>=0.10.2",
]
